# Chess-Library

./: .gitignore  CMakeLists.txt  Documentation.md  README.md  chess_lib.h
.cache/clangd/index/: Bishop.cpp.47DC5093807F9172.idx  Board.cpp.CCEC2527C4729B31.idx  King.cpp.2FE62B71D4E563C3.idx  Knight.cpp.155C86AB06A0165C.idx  Pawn.cpp.189F95AEF22AFA2D.idx  Piece.cpp.7BF6F2AF41D0362E.idx  Pieces.cpp.D9B56CE64C51A284.idx  Queen.cpp.BA925893EB48045F.idx  Rook.cpp.AD6574BE4BD05C1D.idx  board.h.06C356E1ACEDB178.idx  board_utils.cpp.69BAB18E09253F61.idx  board_utils.h.CCD9459D2399A84B.idx  fen.cpp.AA58C1C482207C61.idx  king_checks.cpp.F0EA9673629F0C4D.idx  movement.cpp.3CA0FEFABE242C1A.idx  movement.h.920BD22AEFE701AB.idx  notation.h.66D406BA89831E94.idx  pgn.cpp.B50886ACF5280AF1.idx  pieces.h.A3FA933785C46407.idx  special_piece_moves.cpp.FDD10B8E7773D0D9.idx  structs.h.7F6D34D708539D5C.idx
include/: board.h  board_utils.h  movement.h  notation.h  pieces.h  structs.h
src/: chess_lib.h  main.cpp
src/Board/: Board.cpp  board.h  board_utils.cpp  board_utils.h  king_checks.cpp  movement.cpp  special_piece_moves.cpp  structs.h
src/GUI/: clicking_move.cpp  drag_n_drop_piece.cpp  gui.cpp  gui.h
src/GUI/Board/: board.cpp
src/GUI/Rendering/: rendering.cpp  rendering.h
src/Game/: game_logic.cpp  game_logic.h  game_utils.h
src/Menu/: menu.cpp  menu.h
src/Notation/: fen.cpp  notation.h  pgn.cpp
src/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Pieces.cpp  Pieces.h  Queen.cpp  Rook.cpp
src/includes/: board.h  board_utils.h  movement.h  notation.h
tests/: test_fens.h  tests.cpp  tests.h
